--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,6 @@
 @import-normalize;
 
-html,
-body {
+html {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
