--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -20,7 +20,7 @@
 /*FOOTER*/
 
 .footerabove {
-  padding: 100px 0;
+  padding: 10px 0;
   text-align: center;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .footerabove h4 {
-  margin-top: 30px;
+  margin-top: 3px;
   margin-bottom: 30px;
   font-size: 25px;
 }
@@ -42,7 +42,7 @@
   width: 35px;
   height: 35px;
   line-height: 35px;
-  margin: 3px 1px;
+  margin: 1px 1px;
   font-size: 14px;
   background: #d5d5d5;
   color: #fff;
@@ -59,13 +59,14 @@
 
 .footer {
   padding: 50px 0;
-  background: #eee;
+  /*  background: #eee; */
+  background: #bcffed;
   text-align: center;
 }
-
+/*   color: #808080;      fontFamily: "Raleway"  color: "#487867" */
 .navlink {
   margin-bottom: 1px;
-  color: #808080;
+  color: #487867;
 }
 
 /*  STATS*/
